add desktop styles

--- a/index.html
+++ b/index.html
@@ -335,13 +335,15 @@
                 height="185"
                 class="strategies-img"
               />
-              <p class="img-caption">
-                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
-                2019
-              </p>
-              <h3 class="strategies-title">
-                Increasing Prosperity With Positive Thinking
-              </h3>
+              <div class="strategies-item-wrap">
+                <p class="img-caption">
+                  By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                  2019
+                </p>
+                <h3 class="strategies-title">
+                  Increasing Prosperity With Positive Thinking
+                </h3>
+              </div>
             </li>
             <li class="strategies-item">
               <img
@@ -351,13 +353,15 @@
                 height="185"
                 class="strategies-img"
               />
-              <p class="img-caption">
-                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
-                2019
-              </p>
-              <h3 class="strategies-title green-title">
-                Motivation Is The First Step To Success
-              </h3>
+              <div class="strategies-item-wrap">
+                <p class="img-caption">
+                  By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                  2019
+                </p>
+                <h3 class="strategies-title green-title">
+                  Motivation Is The First Step To Success
+                </h3>
+              </div>
             </li>
             <li class="strategies-item">
               <img
@@ -367,13 +371,15 @@
                 height="185"
                 class="strategies-img"
               />
-              <p class="img-caption">
-                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
-                2019
-              </p>
-              <h3 class="strategies-title">
-                Success Steps For Your Personal Or Business
-              </h3>
+              <div class="strategies-item-wrap">
+                <p class="img-caption">
+                  By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                  2019
+                </p>
+                <h3 class="strategies-title">
+                  Success Steps For Your Personal Or Business
+                </h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -382,7 +388,7 @@
       <!-- PRICE SECTION -->
       <section class="section-paddings">
         <div class="container">
-          <h2 class="section-title strategies-main-title">Price Table</h2>
+          <h2 class="section-title price-main-title">Price Table</h2>
           <p class="price-main-text">We offer competitive price</p>
           <ul class="price-list">
             <li class="price-item">
@@ -522,16 +528,18 @@
       <!-- JOIN SECTION -->
       <section class="section-paddings">
         <div class="container join-container">
-          <h2 class="section-title join-title">
-            Join 100 Compannies who boost their business with Product
-          </h2>
-          <button class="join-btn" type="button">Get This</button>
+          <div class="join-title-wrap">
+            <h2 class="section-title join-title">
+              Join 100 Compannies who boost their business with Product
+            </h2>
+            <button class="join-btn" type="button">Get This</button>
+          </div>
           <img
+            class="join-img"
             src="./images/join.svg"
             alt="Screen app"
             width="351"
             height="331"
-            class="join-img"
           />
         </div>
       </section>
@@ -539,82 +547,88 @@
 
     <footer class="section-paddings">
       <div class="container">
-        <a href="./index.html" class="footer-logo"
-          ><svg width="32" height="30" class="footer-logo-icon">
-            <use href="./images/icons.svg#icon-logo"></use>
-          </svg>
-          <img srcset="./images/footer-logo.png" width="115" height="22" />
-        </a>
-        <ul class="footer-sm-list">
-          <li>
-            <a
-              class="footer-sm-link"
-              href="https://www.instagram.com/"
-              target="_blank"
-            >
-              <svg class="footer-sm-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+        <div class="footer-container">
+          <div class="footer-logo-wrap">
+            <a href="./index.html" class="footer-logo"
+              ><svg width="32" height="30" class="footer-logo-icon">
+                <use href="./images/icons.svg#icon-logo"></use>
               </svg>
+              <img srcset="./images/footer-logo.png" width="115" height="22" />
             </a>
-          </li>
-          <li>
-            <a
-              class="footer-sm-link"
-              href="https://www.facebook.com/"
-              target="_blank"
-            >
-              <svg class="footer-sm-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-sm-link" href="https://x.com/" target="_blank">
-              <svg class="footer-sm-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <ul class="footer-menu-list">
-          <li>
-            <h2 class="footer-menu-title">Resource</h2>
-            <ul>
-              <li><a class="footer-menu-link" href="">About Us</a></li>
-              <li><a class="footer-menu-link" href="">Blog</a></li>
-              <li><a class="footer-menu-link" href="">Contact</a></li>
-              <li><a class="footer-menu-link" href="">FAQ</a></li>
+            <ul class="footer-sm-list">
+              <li>
+                <a
+                  class="footer-sm-link"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                >
+                  <svg class="footer-sm-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-sm-link"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                >
+                  <svg class="footer-sm-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="footer-sm-link" href="https://x.com/" target="_blank">
+                  <svg class="footer-sm-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
-          </li>
-          <li>
-            <h2 class="footer-menu-title">Legal Stuff</h2>
-            <ul>
-              <li><a class="footer-menu-link" href="">Disclaimer</a></li>
-              <li><a class="footer-menu-link" href="">Financing</a></li>
-              <li><a class="footer-menu-link" href="">Privacy Policy</a></li>
-              <li><a class="footer-menu-link" href="">Terms of Service</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form name="footer-form">
-          <label for="phone" class="footer-label"
-            >knowing you're always on the best energy deal.
-          </label>
-          <div class="pnone-input-wrap">
-            <input
-              class="footer-input"
-              type="tel"
-              id="phone"
-              required
-              placeholder="Enter your phone number"
-              name="user-phone"
-            />
-            <svg class="phone-input-icon" width="18" height="28">
-              <use href="./images/icons.svg#icon-mobile-screen"></use>
-            </svg>
           </div>
-          <button class="footer-submit-btn" type="submit">Sign up Now</button>
-        </form>
+          <ul class="footer-menu-list">
+            <li>
+              <h2 class="footer-menu-title">Resource</h2>
+              <ul>
+                <li><a class="footer-menu-link" href="">About Us</a></li>
+                <li><a class="footer-menu-link" href="">Blog</a></li>
+                <li><a class="footer-menu-link" href="">Contact</a></li>
+                <li><a class="footer-menu-link" href="">FAQ</a></li>
+              </ul>
+            </li>
+            <li>
+              <h2 class="footer-menu-title">Legal Stuff</h2>
+              <ul>
+                <li><a class="footer-menu-link" href="">Disclaimer</a></li>
+                <li><a class="footer-menu-link" href="">Financing</a></li>
+                <li><a class="footer-menu-link" href="">Privacy Policy</a></li>
+                <li>
+                  <a class="footer-menu-link" href="">Terms of Service</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <form class="footer-form" name="footer-form">
+            <label for="phone" class="footer-label"
+              >knowing you're always on the best energy deal.
+            </label>
+            <div class="pnone-input-wrap">
+              <input
+                class="footer-input"
+                type="tel"
+                id="phone"
+                required
+                placeholder="Enter your phone number"
+                name="user-phone"
+              />
+              <svg class="phone-input-icon" width="18" height="28">
+                <use href="./images/icons.svg#icon-mobile-screen"></use>
+              </svg>
+            </div>
+            <button class="footer-submit-btn" type="submit">Sign up Now</button>
+          </form>
+        </div>
         <p class="footer-text">Made With Love By Product All Right Reserved</p>
       </div>
     </footer>
