--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Business promotion</title>
 
     <link
+      rel="icon"
+      type="image/png"
+      href="./favicon/favicon-48x48.png"
+      sizes="48x48"
+    />
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
+
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
       integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
@@ -20,7 +35,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
@@ -37,12 +52,14 @@
             <li class="menu-item">
               <a class="menu-link current" href="./index.html">Product</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="">Pricing</a></li>
             <li class="menu-item">
-              <a class="menu-link" href="">Customers</a>
+              <a class="menu-link" href="./pages/prising.html">Pricing</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="">Resources</a>
+              <a class="menu-link" href="./pages/customers.html">Customers</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="./pages/resources.html">Resources</a>
             </li>
           </ul>
         </nav>
