--- a/pages/prising.html
+++ b/pages/prising.html
@@ -8,17 +8,21 @@
     <link
       rel="icon"
       type="image/png"
-      href="./favicon/favicon-48x48.png"
+      href="../images/favicon/favicon-48x48.png"
       sizes="48x48"
     />
-    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
-    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../images/favicon/favicon.svg"
+    />
+    <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./favicon/apple-touch-icon.png"
+      href="../images/favicon/apple-touch-icon.png"
     />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="manifest" href="../images/favicon/site.webmanifest" />
 
     <link
       rel="stylesheet"
@@ -53,15 +57,13 @@
               <a class="menu-link" href="../index.html">Product</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link current" href="../pages/prising.html"
-                >Pricing</a
-              >
+              <a class="menu-link current" href="./prising.html">Pricing</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="../pages/customers.html">Customers</a>
+              <a class="menu-link" href="./customers.html">Customers</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="../pages/resources.html">Resources</a>
+              <a class="menu-link" href="./resources.html">Resources</a>
             </li>
           </ul>
         </nav>
@@ -196,6 +198,7 @@
       </section>
     </main>
 
+    <!-- FOOTER PAGE -->
     <footer class="section-paddings">
       <div class="container">
         <div class="footer-container">
