add effects section to prising page

--- a/pages/customers.html
+++ b/pages/customers.html
@@ -85,7 +85,7 @@
           </li>
         </ul>
 
-        <button class="mobile-menu-btn" type="button">
+        <button class="mobile-menu-btn" type="button" data-menu-open>
           <svg class="mobile-menu-icon" width="28" height="31">
             <use href="../images/icons.svg#icon-menu"></use>
           </svg>
@@ -202,5 +202,66 @@
         <p class="footer-text">Made With Love By Product All Right Reserved</p>
       </div>
     </footer>
+
+    <!-- PHONE MENU -->
+    <div class="menu-backdrop" data-menu>
+      <div class="mobile-menu">
+        <button class="mobile-close-btn" type="button" data-menu-close>
+          <svg class="mobile-close-icon" width="40" height="40">
+            <use href="../images/icons.svg#icon-x"></use>
+          </svg>
+        </button>
+        <ul class="mobile-nav-list">
+          <li class="mobile-nav-item">
+            <a class="mobile-nav-link" href="../index.html">Product</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a class="mobile-nav-link" href="./prising.html">Pricing</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a class="mobile-nav-link current" href="./customers.html"
+              >Customers</a
+            >
+          </li>
+          <li class="mobile-nav-item">
+            <a class="mobile-nav-link" href="./resources.html">Resources</a>
+          </li>
+        </ul>
+        <ul class="mobile-sm-list">
+          <li class="mobile-sm-item">
+            <a
+              class="mobile-sm-link"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="mobile-sm-icons" width="40" height="40">
+                <use href="../images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-sm-item">
+            <a
+              class="mobile-sm-link"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg class="mobile-sm-icons" width="40" height="40">
+                <use href="../images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-sm-item">
+            <a class="mobile-sm-link" href="https://x.com/" target="_blank">
+              <svg class="mobile-sm-icons" width="40" height="40">
+                <use href="../images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- MENU SCRIPT -->
+    <script src="../js/menu.js" type="module"></script>
   </body>
 </html>
