add question section to prising page

--- a/pages/prising.html
+++ b/pages/prising.html
@@ -219,6 +219,41 @@
         </div>
       </section>
 
+      <!-- QUESTION SECTION -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="question-title">Frequently asked question</h2>
+          <p class="question-text">
+            Something is not clear? You need help? Check our FAQ section
+          </p>
+          <ul class="question-list">
+            <li class="question-item">
+              <h3 class="question-list-title">What are my payment option?</h3>
+            </li>
+            <li class="question-item">
+              <h3 class="question-list-title">
+                How can I invite collaborator to platform?
+              </h3>
+              <p class="question-list-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
+            </li>
+            <li class="question-item">
+              <h3 class="question-list-title">Can I upgrade my plan?</h3>
+            </li>
+            <li class="question-item">
+              <h3 class="question-list-title">
+                Can I cancel my plan at anytime?
+              </h3>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <!-- JOIN SECTION -->
       <section class="section-paddings">
         <div class="container join-container">
